2011-12-25  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.9
        * inst/NEWS: Release 0.9.9
        * inst/include/Rcpp/config.h: Release 0.9.9
        * debian/*: Similarly updated for new release to Debian

2011-12-24  Dirk Eddelbuettel  <edd@debian.org>

	* Reverting the 'int64' changes listed below (during the period from
	  Oct-31 to Nov-07) which adversely affect packages using Rcpp
	  We will re-apply the 'int64' changes in a way which should
	  cooperate more easily with 'long' and 'unsigned long'
	  This covered svn revisions 3264 to 3308.

	* DESCRIPTION: Remove (for now) Depends: on int64
	* inst/doc/Rcpp-FAQ/Rcpp-FAQ.Rnw: Dito for int64_t example

	* inst/unitTests/runit.Module.client.package.R: On Windows,
	deactivate 'test.Module.package'

	* inst/unitTests/runit.client.package.R: On Windows, deactivate
	'test.client.packageA' test

2011-12-23  Dirk Eddelbuettel  <edd@debian.org>

	* inst/unitTests/runTests.R: unit tests output 'fallback' directory
	changed to '..' and files are now in top-level of $pkg.Rcheck/

2011-12-21  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION: Release 0.9.8
        * inst/NEWS: Release 0.9.8
        * inst/include/Rcpp/config.h: Release 0.9.8
        * debian/*: Similarly updated for new release to Debian

2011-12-20  Dirk Eddelbuettel  <edd@debian.org>

	* inst/skeleton/zzz.R (.onLoad): correct order of arguments

2011-12-18  Dirk Eddelbuettel  <edd@debian.org>

	* inst/examples/FastLM/lmArmadillo.R: Link with -llapack when using
	external Armadillo library (but RcppArmadillo makes all	this easier)

2011-12-18  Romain Francois  <romain@r-enthusiasts.com>

	* inst/doc/*: Fixes to various vignettes for new version of highlight

2011-12-16  Douglas Bates  <bates@stat.wisc.edu>

	* inst/unitTests/runit.stats.R: Correct cut+paste typo in qbinom

	* inst/include/Rcpp/XPtr.h: Check for XPtr type constructing from SEXP

2011-12-12  John M Chambers  <jmc@r-project.org>
