@@ -1,3 +1,9 @@
+2012-01-15  Romain Francois  <romain@r-enthusiasts.com>
+
+        * inst/include/Rcpp/vector/Vector.h: fixing IntegerVector(int,int), reported
+	  by Gregor Kastner on rcpp-devel
+        * inst/unitTests/runit.Vector.R: regression test for the above
+
 2011-12-25  Dirk Eddelbuettel  <edd@debian.org>
 
         * DESCRIPTION: Release 0.9.9
